--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Minesweeper</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="assets/font-awesome-4.7.0/css/font-awesome.min.css"
+		/>
 		<script src="app.js"></script>
 	</head>
 	<body>
 		<div class="container">
 			<div class="grid"></div>
-			<div>Flags left: <span id="flags-remaining"></span></div>
+			<div>Flags left: <span id="flags-remaining" /></div>
 			<div id="result"></div>
 		</div>
 	</body>
