--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Minesweeper</title>
+		<link rel="icon" type="image/x-icon" href="assets/images/favico.ico"></link>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css" />
 		<script src="app.js"></script>
